--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,3 +90,6 @@ extra_javascript:
 nav:
   - Home: index.md
   - Installation: installation.md
+  - Basics:
+    - Getting Started: GetStart.md
+    - GetHelp: gethelp.md
