added file and folders

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,3 +95,4 @@ nav:
     - GetHelp: gethelp.md
     - GetAlias: getalias.md
     - Config Profile: config_profile.md
+    - Files & Folders: files_folders.md
