Added pipeline explain

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,3 +97,4 @@ nav:
     - GetAlias: getalias.md
     - Config Profile: config_profile.md
     - Files & Folders: files_folders.md
+    - Pipeline: pipeline.md
