Added 2nd exercise

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,3 +101,4 @@ nav:
     - Pipeline: pipeline.md
     - Output Format: out_format.md
     - Object Comparison: comparison.md
+    - Exercise 2: Exercises2.md
