--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,3 +102,4 @@ nav:
     - Output Format: out_format.md
     - Object Comparison: comparison.md
     - Exercise 2: Exercises2.md
+    - Formatting: tables_lists.md
