--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -112,3 +112,4 @@ nav:
   - Scripting:
     - Variables: Scripting\variables.md
     - Console IO: Scripting\ConsoleIO.md
+    - Basic Scripting: Scripting\basic.md
