Added advanced script

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -114,3 +114,4 @@ nav:
     - Console IO: Scripting\ConsoleIO.md
     - Basic Scripting: Scripting\basic.md
     - Script Documentation: Scripting\comments.md
+    - Advanced Script: Scripting\advanced.md
