Added control flow

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,3 +115,6 @@ nav:
     - Basic Scripting: Scripting\basic.md
     - Script Documentation: Scripting\comments.md
     - Advanced Script: Scripting\advanced.md
+    - Conditionals: Scripting\cond.md
+    - Handling Errors: Scripting\ErrorHandling.md
+    - Loops: Scripting\loops.md
