--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,5 +116,7 @@ nav:
     - Script Documentation: Scripting\comments.md
     - Advanced Script: Scripting\advanced.md
     - Conditionals: Scripting\cond.md
-    - Handling Errors: Scripting\ErrorHandling.md
     - Loops: Scripting\loops.md
+  - Advanced:
+    - Handling Errors: Advanced\ErrorHandling.md
+    - Modules: Advanced\modules.md
