--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,6 +106,7 @@ nav:
     - Object Comparison: comparison.md
     - Exercise 2: Exercises\Exercises2.md
     - Formatting: tables_lists.md
+    - Filtering: filtering.md
     - Exercise 3: Exercises\Exercises3.md
     - Windows Management: wmi_cmi.md
     - Exercise 4: Exercises\Exercises4.md
