--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,7 @@ nav:
     - Exercise 2: Exercises\Exercises2.md
     - Formatting: tables_lists.md
     - Filtering: filtering.md
+    - Enumeration: enum.md
     - Exercise 3: Exercises\Exercises3.md
     - Windows Management: wmi_cmi.md
     - Exercise 4: Exercises\Exercises4.md
