--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -169,3 +169,4 @@ nav:
       - Licenses: Net\365-licenses.md 
       - Exchange Online: Net\365-eo.md
       - SharePoint: Net\365-sp.md
+      - Teams: Net\365-teams.md
